# oscilloscope-graphics

./: Cargo.toml  README.md
.cargo/: config.toml
src/: display.rs  drawable.rs  lib.rs  main.rs
src/drawable/: parametric.rs  parametric_path.rs
