[package]
name = "oscilloscope-graphics"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
# embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.7", features = [
#     "unproven",
# ] }
embedded-hal = "1.0.0"
libm = "0.2.8"
rp-pico = "0.9.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
